# ForceDimension-OmegaVersionWithSOFA

./: README.md
MyPlugin/: CMakeLists.txt  MyPlugin.md  MyPluginConfig.cmake.in
MyPlugin/scenes/: OmegaCube.scn  OmegaDeformableCube.scn  OmegaNeedle.scn  OmegaSingle.scn  OmegaSkull.scn  OmegaTesting.scn
MyPlugin/src/MyPlugin/: OmegaDriver.cpp  OmegaDriver.h  TestBehaviorModel.cpp  TestBehaviorModel.h  config.h.in  initMyPlugin.cpp
